mir: connect to content-hub

https://bugzilla.gnome.org/show_bug.cgi?id=775732